--- a/postman/schemas/api.yaml
+++ b/postman/schemas/api.yaml
@@ -60,7 +60,7 @@ paths:
         required: true
       responses:
         '200':
-          description: Successful2 operation
+          description: Successful operation
           content:
             application/json:
               schema:
@@ -69,7 +69,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Pet'
         '400':
-          description: Invalid ID supplied
+          description: Invalid3 ID supplied
         '404':
           description: Pet not found
         '405':
